--- a/style.css
+++ b/style.css
@@ -1,55 +1,1 @@
-@charset "UTF-8";
-.page {
-  max-width: 1400px;
-  min-height: 100vh;
-  margin: 0 auto;
-  padding: 10px;
-  background: red;
-  font-family: serif;
-  overflow: hidden;
-}
-.page__title {
-  color: #fff;
-  font-size: 25px;
-  margin-bottom: 10px;
-}
-.page__description {
-  color: #fff;
-  font-size: 40px;
-  margin-bottom: 10px;
-}
-.page .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.page .grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
-}
-.page .box {
-  width: 100px;
-  height: 100px;
-  background-color: lightblue;
-  transition: transform 0.3s ease;
-}
-.page .box:hover {
-  transform: rotate(45deg);
-}
-.page input:focus-visible {
-  outline: 2px solid blue;
-}
-.page .example {
-  display: flex;
-  transition: transform 0.5s;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-.page .overlay {
-  background-color: rgba(0, 0, 0, 0.5);
-}
+@charset "UTF-8";.page{max-width:1400px;min-height:100vh;margin:0 auto;padding:10px;background:red;font-family:serif;overflow:hidden}.page__title{color:#fff;font-size:25px;margin-bottom:10px}.page__description{color:#fff;font-size:40px;margin-bottom:10px}.page .container{display:flex;justify-content:space-between;align-items:center}.page .grid-container{display:grid;grid-template-columns:1fr 1fr;grid-gap:20px}.page .box{width:100px;height:100px;background-color:#add8e6;transition:transform .3s ease}.page .box:hover{transform:rotate(45deg)}.page input:focus-visible{outline:2px solid #00f}.page .example{display:flex;transition:transform .5s;-webkit-user-select:none;-moz-user-select:none;user-select:none;-webkit-appearance:none;-moz-appearance:none;appearance:none}.page .overlay{background-color:rgba(0,0,0,.5)}
