--- a/style.css
+++ b/style.css
@@ -1,1 +1,75 @@
-@charset "UTF-8";.page{max-width:1400px;min-height:100vh;margin:0 auto;padding:10px;background:red;font-family:serif;overflow:hidden}.page__title{color:#fff;font-size:25px;margin-bottom:10px}.page__description{color:#fff;font-size:40px;margin-bottom:10px}.page .container{display:flex;justify-content:space-between;align-items:center}.page .grid-container{display:grid;grid-template-columns:1fr 1fr;grid-gap:20px}.page .box{width:100px;height:100px;background-color:#add8e6;transition:transform .3s ease}.page .box:hover{transform:rotate(45deg)}.page input:focus-visible{outline:2px solid #00f}.page .example{display:flex;transition:transform .5s;-webkit-user-select:none;-moz-user-select:none;user-select:none;-webkit-appearance:none;-moz-appearance:none;appearance:none}.page .overlay{background-color:rgba(0,0,0,.5)}
+@charset "UTF-8";
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+img {
+  width: 300px;
+  height: 500px;
+}
+
+.page {
+  max-width: 1400px;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 10px;
+  background: blue;
+  font-family: serif;
+  overflow: hidden;
+  /* Пример с grid */
+  /* Трансформации и переходы */
+  /* Пример для focus-visible */
+  /* Пример для старых свойств */
+}
+.page__title {
+  color: #fff;
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+.page__description {
+  color: #fff;
+  font-size: 40px;
+  margin-bottom: 10px;
+}
+.page .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.page .grid-container {
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+.page .box {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+.page .box:hover {
+  transform: rotate(45deg);
+}
+.page input:focus-visible {
+  outline: 2px solid blue;
+}
+.page .example {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+  user-select: none;
+  appearance: none;
+}
+.page .overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+}
