--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,21 @@
+
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+img{
+  width : 300px;
+  height: 500px;
+}
+
 .page{
     max-width : 1400px;
     min-height: 100vh;
     margin: 0 auto;
     padding : 10px;
-    background: red;
+    background: blue;
     font-family: serif;
     overflow: hidden;
     &__title{
@@ -36,7 +48,7 @@
       .box {
         width: 100px;
         height: 100px;
-        background-color: lightblue;
+        background-color: red;
         transition: -webkit-transform 0.3s ease;
         transition: transform 0.3s ease;
         transition: transform 0.3s ease, -webkit-transform 0.3s ease;
