--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@ img{
     min-height: 100vh;
     margin: 0 auto;
     padding : 10px;
-    background: red;
+    background: orange;
     font-family: serif;
     overflow: hidden;
     &__title{
